# rag-benchmark

./: .gitignore  README.md  app.py  config.toml  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: clear_milvus.py  ingest.py  verify_retrieval.py
src/milvus_rag/: __init__.py  config.py  container.py  text_utils.py
src/milvus_rag/api/: __init__.py  factory.py  schemas.py
src/milvus_rag/benchmark/: __init__.py  models.py  runner.py
src/milvus_rag/embeddings/: __init__.py  service.py
src/milvus_rag/ingest/: __init__.py  hotpotqa.py
src/milvus_rag/rag/: __init__.py  service.py
src/milvus_rag/reranker/: __init__.py  service.py
src/milvus_rag/retrieval/: __init__.py  pipeline.py
src/milvus_rag/store/: __init__.py  milvus_store.py
src/milvus_rag/ui/: __init__.py  formatters.py  gradio_app.py
